update stream tutorial